Update WTL API URL to real teachm3.elms.pl endpoint

--- a/env.example
+++ b/env.example
@@ -1,5 +1,5 @@
 # Web To Learn API Configuration
-WTL_API_URL=https://api.webtolearn.com
+WTL_API_URL=https://teachm3.elms.pl/api/v1
 WTL_API_KEY=your-wtl-api-key-here
 
 # Supabase Configuration
