Fix WTL API authorization - use X-Auth-Token header as per documentation

--- a/env.example
+++ b/env.example
@@ -1,6 +1,7 @@
 # Web To Learn API Configuration
 WTL_API_URL=https://teachm3.elms.pl/api/v1
-WTL_API_KEY=your-wtl-api-key-here
+# API Token z Panel administracyjny -> Konfiguracja Platformy -> API
+WTL_API_KEY=your-api-token-from-wtl-admin-panel
 
 # Supabase Configuration
 NEXT_PUBLIC_SUPABASE_URL=your-supabase-url
