feat: implement OTP authentication system

--- a/env.example
+++ b/env.example
@@ -1,13 +1,14 @@
-# Web To Learn API Configuration
+# WebToLearn API Configuration
 WTL_API_URL=https://teachm3.elms.pl/api/v1
-# API Token z Panel administracyjny -> Konfiguracja Platformy -> API
-WTL_API_KEY=your-api-token-from-wtl-admin-panel
+WTL_API_KEY=your_webtolearn_api_key_here
 
-# Supabase Configuration
-NEXT_PUBLIC_SUPABASE_URL=your-supabase-url
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
-SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key
+# JWT Configuration
+JWT_SECRET=your-super-secret-jwt-key-change-in-production
 
-# Application Configuration
-NEXT_PUBLIC_APP_URL=https://wtl-smoky.vercel.app
-NODE_ENV=production
+# App Configuration
+NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# Supabase Configuration (if using)
+NEXT_PUBLIC_SUPABASE_URL=your_supabase_url
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
+SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
