--- a/env.example
+++ b/env.example
@@ -8,7 +8,8 @@ JWT_SECRET=your-super-secret-jwt-key-change-in-production
 # App Configuration
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
-# Supabase Configuration (if using)
-NEXT_PUBLIC_SUPABASE_URL=your_supabase_url
+# Supabase Configuration
+NEXT_PUBLIC_SUPABASE_URL=your_supabase_project_url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
 SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
+NEXT_PRIVATE_SUPABASE_PASSWD=your_supabase_database_password
