feat: integrate WTL API for teacher student management - Add StudentList component for teachers to view students on their courses - Create WTL API endpoints for trainings and training users - Update navigation and user menu with teacher-specific links - Remove dependency on local database tables for course data

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "db:check": "node scripts/check-users-structure.js",
     "db:auto": "node scripts/auto-migrate.js",
     "db:sql": "node scripts/run-sql-migration.js",
+    "add-test-data": "node scripts/add-test-data.js",
     "prebuild": "npm run db:auto",
     "postbuild": "npm run db:check"
   },
