feat: enhance deployment process and user management - add detailed deployment instructions for Vercel, implement pagination for users, lessons, and students, and streamline course lesson management with improved error handling and synchronization logic

--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "supabase:start": "npx supabase start",
     "supabase:stop": "npx supabase stop",
     "supabase:status": "npx supabase status",
+    "deploy:prod": "npm run build:prod && npx vercel --prod --yes",
+    "deploy:preview": "npm run build && npx vercel --yes",
     "db:migrate": "node scripts/apply-migrations.js",
     "db:check": "node scripts/check-users-structure.js",
     "db:auto": "node scripts/auto-migrate.js",
+    "db:push:prod": "node scripts/push-migrations-prod.js",
     "db:sql": "node scripts/run-sql-migration.js",
     "add-test-data": "node scripts/add-test-data.js",
     "supabase:db:reset": "supabase db reset",
