feat: add lesson merging functionality and improve lesson retrieval logic - introduce a new script for merging lessons, enhance API endpoints for lesson management, and streamline error handling in lesson synchronization

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "db:auto": "node scripts/auto-migrate.js",
     "db:push:prod": "node scripts/push-migrations-prod.js",
     "db:sql": "node scripts/run-sql-migration.js",
+    "db:merge-lessons": "node scripts/merge-lessons.js",
     "add-test-data": "node scripts/add-test-data.js",
     "supabase:db:reset": "supabase db reset",
     "supabase:db:push": "supabase db push",
