feat: integrate Google OAuth and update Supabase dependency - add Google OAuth configuration to the environment file, enhance admin dashboard with survey link management, and update Supabase package to version 2.39.2 for improved functionality

--- a/env.example
+++ b/env.example
@@ -13,3 +13,12 @@ NEXT_PUBLIC_SUPABASE_URL=your_supabase_project_url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
 SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 NEXT_PRIVATE_SUPABASE_PASSWD=your_supabase_database_password
+# Google Forms OAuth
+# Use placeholder values; keep real secrets only in local .env files
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+GOOGLE_REDIRECT_URI="http://localhost:3000/api/surveys/google/callback"
+
+# Production URLs (for Vercel deployment)
+# GOOGLE_REDIRECT_URI="https://wtl-smoky.vercel.app/api/surveys/google/callback"
+# NEXT_PUBLIC_APP_URL="https://wtl-smoky.vercel.app"
